@@ -15,6 +15,7 @@ LIST OF CHANGES
    NovaSeqX instruments.
  - Removed remaining unused test data from the era of xml st::api::lims driver.
  - Updated signature and iRODS documentation link in template for emails
+ - Updated NPG tracking url to https protocol and port for links in emails
 
 release 98.1.0
  - Added a new method, latest_revision_for_modification, to
